--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header class="header">
     <div class="logo">
       <!-- Imagen del logo -->
-      <img src="/img/Logo1.png" alt="">
+      <img src="Logo1.png" alt="">
     </div>
 
     <!-- Navegación -->
@@ -63,7 +63,7 @@
     <div class="about-cards">
       
       <div class="card">
-        <img src="img/Agro.jpg" alt="Campesino feliz en el campo">
+        <img src="Agro.jpg" alt="Campesino feliz en el campo">
         <div class="card-text">
           <h3>Transparencia</h3>
           <p>Compras directas sin intermediarios.</p>
@@ -71,7 +71,7 @@
       </div>
 
       <div class="card">
-        <img src="img/wefwefwe.jpg" alt="Campesina recogiendo cosecha">
+        <img src="wefwefwe.jpg" alt="Campesina recogiendo cosecha">
         <div class="card-text">
           <h3>Justicia</h3>
           <p>Precios justos para campesinos y productores.</p>
@@ -79,7 +79,7 @@
       </div>
 
       <div class="card">
-        <img src="img/inicia-compra-de-tierras-para-campesinos.png" alt="Campesinos cultivando café">
+        <img src="inicia-compra-de-tierras-para-campesinos.png" alt="Campesinos cultivando café">
         <div class="card-text">
           <h3>Confianza</h3>
           <p>Alimentos frescos, sanos y de calidad.</p>
@@ -107,7 +107,7 @@
   <div class="harvest-grid">
     <!-- Tarjeta 1 -->
     <div class="card">
-      <img src="img/papa-criolla-3432646_1280.jpg" alt="Papa criolla">
+      <img src="papa-criolla-3432646_1280.jpg" alt="Papa criolla">
       <div class="card-info">
         <h3>Papa criolla</h3>
         <p class="price">$5.900 <span>x libra</span></p>
@@ -120,7 +120,7 @@
 
     <!-- Tarjeta 2 -->
     <div class="card">
-      <img src="img/beef-tomato-4062505_1280.jpg" alt="Tomate">
+      <img src="beef-tomato-4062505_1280.jpg" alt="Tomate">
       <div class="card-info">
         <h3>Tomate</h3>
         <p class="price">$3.500 <span>x libra</span></p>
@@ -133,7 +133,7 @@
 
     <!-- Tarjeta 3 -->
     <div class="card">
-      <img src="img/green-onions-699943_1280.jpg" alt="Cebolla">
+      <img src="green-onions-699943_1280.jpg" alt="Cebolla">
       <div class="card-info">
         <h3>Cebolla</h3>
         <p class="price">$4.200 <span>x libra</span></p>
@@ -164,7 +164,7 @@
 
     <!-- Foto y nombre -->
     <div class="perfil">
-      <img src="img/wefwefwe - copia.jpg" alt="Jorge Ramírez">
+      <img src="wefwefwe - copia.jpg" alt="Jorge Ramírez">
       <h3>Jorge Ramírez</h3>
       <p>Productor de hortalizas</p>
     </div>
@@ -206,7 +206,7 @@
   <div class="footer-top">
     <!-- Columna Izquierda -->
     <div class="footer-left">
-      <img src="img/Logo1.png" alt="Agrolity Logo" class="footer-logo">
+      <img src="Logo1.png" alt="Agrolity Logo" class="footer-logo">
       <p>
         Del campo a tu vida, cultivamos bienestar y sembramos oportunidades. 
         Porque el agro nos une, las personas nos inspiran y juntos cosechamos futuro.
